--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 	"dependencies": {
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-select": "^5.7.5"
+		"react-select": "^5.7.5",
+		"react-toggle": "^4.1.3"
 	},
 	"devDependencies": {
 		"@testing-library/jest-dom": "^6.1.3",
